--- a/source/_posts/2020-02-12-honidi.markdown
+++ b/source/_posts/2020-02-12-honidi.markdown
@@ -53,9 +53,9 @@ __小型项目和独立项目：__ 小型与独立项目资金比较少，使用
 
 我们再看看 __传统工作流程中有哪些缺点__ ？
 
-成本随资源量增加快速增长：传统工作流程有一个非常致命的缺点，随着开发时间的持续，项目规模会逐渐增长，项目规模越大，资源越多，成本要付出更多。
+__成本随资源量增加快速增长：__ 传统工作流程有一个非常致命的缺点，随着开发时间的持续，项目规模会逐渐增长，项目规模越大，资源越多，成本要付出更多。
 
-项目成型后修改迭代成本剧增：在项目后期修改、迭代的成本非常高。很多客户遇到的一个问题是，当项目快完成的时候，可能策划要改一改，地形要改一改，资源要改一改。于是整个项目迭代周期就变长了。重新制作、重新迭代，成本会剧增。
+__项目成型后修改迭代成本剧增：__ 在项目后期修改、迭代的成本非常高。很多客户遇到的一个问题是，当项目快完成的时候，可能策划要改一改，地形要改一改，资源要改一改。于是整个项目迭代周期就变长了。重新制作、重新迭代，成本会剧增。
 
 __各环节相对独立，不利于测试：__ 在传统工作流程中，开发的每个环节都是相对独立的。参与开发的人员都不知道项目最后是什么样，往往只有等到关卡制作好，客户端打包好，内容加载进来，才可以看到最终的效果。
 
@@ -165,7 +165,7 @@ __基于PDG的工作流程缺点是什么？__
 * [Unity中的程序化随机纹理制作功能][i3]
 * [创建程序化的游戏世界（2）][i4]
 * [在Unity中程序化生成地牢环境][i5]
-* [《莫塔之子》：如何使用程序化生成功能][i6]
+* [莫塔之子：如何使用程序化生成功能][i6]
 * [Inside the Vault：3D环境艺术挑战赛获奖作品][i7]
 * [Unity中的实时光线追踪技术剖析][i8]
 * [Unity性能测试分析解决方案UPR正式上线][i9]
