--- a/source/_posts/2020-01-20-job.markdown
+++ b/source/_posts/2020-01-20-job.markdown
@@ -10,6 +10,45 @@ tags:
 
 >Unity 的高性能多线程面向数据的技术堆栈 (DOTS) 充分利用了多核处理器的优势,可创建更加丰富的用户体验。使用它可以更快地迭代和创建易于重用的 C# 代码。
 
+
+### 从Cache说起
+
+__Cache Miss__
+
+Cache（Cache Memory）作为储存器子系统的组成部分，存放着程序经常使用的指令和数据，是为了缓解访问慢设备的延时而预读的 Buffer，例如 CPU L1/L2/L3 Cache 作为 DDR 内存 IO 的 Cache，而 DDR 内存作为磁盘 IO 的 Cache。当计算需要读取数据的时候，通常从最快得缓存开始依次向下查找，并递归的读取。预读就是用来减少下一次读取的查找层数（每一层的延迟有数量级的差距）的技术。相应的，预读的预测失败的时候将会有非常高的代价，这种情况被称为 Cache Miss。在大部分的情况下，在现代 CPU 的频率带来的运算力下， Cache Miss 比数学运算更容易成为程序的性能瓶颈，且在代码中的表现比较隐晦。这使得一味的讨论复杂度O(n)不再适用，因为现在效率=数据+代码。
+
+__Avoid Cache Miss__
+
+避免 Cache Miss 的方案当然就是去讨好预读。而一般预读的策略为线性预读，即我们应该尽量的保证数据读写的连续性，从逆向思维出发，则需了解会打断数据连续性的情形。简单的列举几个:遍历大结构体的数组（却只访问少数成员），操作对象引用（OOP），操作数组的顺序不够连续（比如实现得不好的 hash 表），etc。综上所述，避免Cache Miss的主要考量就是尽量使用数组，尽量分割属性（SOA），尽量连续的进行处理。（在 GPU 编程中存在大量实例）
+
+![](/img/post-unity/ecs3.jpg)
+
+__More than Data__
+
+前面提到过 Cache 存放着程序经常使用的指令和数据，现代 CPU 在数据 IO 的时候并不会完全的挂起，而是会利用空闲的运算力继续执行后续的指令，且指令也是一种数据，这意味着我们不光要照顾数据的连续性，还需要考虑到指令的连续性，那么什么情况会破坏指令的连续性呢？可能是函数指针（虚函数的调用，回调等），循环超长代码块等。特别是函数指针在 IO 期间，CPU 无事可做，于是在需要高性能的情形下，应该尽量避免虚函数。
+
+__Allocation__
+
+对于数据而言，还有一个重要的问题就是分配内存。在应用中，不管是分配还是释放都是十分消耗性能的操作，前者可能产生碎片,而后者，（考虑 GC）可能带来停顿，（考虑手动）也可能带来危险和脑力负担，所以一般对于高频分配的部分，会预先分配大块内存用来管理（一般称作池化）。
+
+
+###  从 Thread 说起
+
+__Multithread__
+
+随着处理器核心的发展速度减缓，为了进一步提升处理器的性能，堆叠核心成为了新的出路，甚至现在的处理器没个四核都不好意思见人，其中堆叠核心的巅峰就是 GPU，上千个核心带来了疯狂的数字处理能力，被广泛运用于 AI 和图形领域。而这在游戏之类的高性能软件中，为了充分利用 CPU 的算力，程序设计成多线程运行也是非常必要的。
+
+__Race Condition 和 Data Race__
+
+不幸的是多线程很多时候不是免费的性能，并不是所有情况都像异步读文件那么简单，在开发过程中，很多地方都可能会有 Race 的发生。同步性问题非常的恶心，因为通常其不会即时造成崩溃之类的错误，而是会积累错误，等到错误爆发，缘由已经很难查询。所以编码的时候就必须要小心翼翼，其中 Race Condition 主要需要我们保证整体操作的原子性，一般的解决方案是一把大锁。Data Race 则更加复杂，触发Data Race的条件可以归纳为：
+
+* 1, 同一个位置的对象。
+* 2, 被两个并发的线程操作。
+* 3, 两个线程并非都是读。
+* 4, 不是原子操作。
+
+
+
 ## ECS
 
 ### 块（Chunk）
