--- a/source/_posts/2020-02-12-honidi.markdown
+++ b/source/_posts/2020-02-12-honidi.markdown
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      "Unity和Houdini场景程序化工作流程"
+title:      "Unity2和Houdini场景程序化工作流程"
 date:       2020-02-12 12:00:00
 author:     "王靖"
 tags:
