--- a/source/_posts/2020-03-08-p2p.markdown
+++ b/source/_posts/2020-03-08-p2p.markdown
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      "AR 端对端直连技术"
+title:      "手机端对端直连技术"
 date:       2020-03-08 02:00:00
 author:     "huailiang"
 tags:
