--- a/source/_posts/2020-03-25-3dpose.markdown
+++ b/source/_posts/2020-03-25-3dpose.markdown
@@ -138,7 +138,6 @@ DensePose 采用了基于 FPN 的 Mask R-CNN 结构，RoI-Align Pooling.
 __human3.6m关节点标注顺序__
 
 
-
 | 序号 | 数据集标注顺序 | 关节名    | 中文名 |
 | ---- | -------------- | --------- | ------ |
 | 0    | 0              | hip       | 臀部   |
@@ -194,6 +193,42 @@ __COCO数据集骨骼关节keypoint标注对应__
 
 <br>
 
+__Openpose-Body25数据集骨骼关节keypoint标注对应__
+
+
+|序号	|数据集标注顺序|	关节名|	中文名|
+| ---- | -------------- | ---------- | ------ |
+|0  |	0   |	Nose    |	鼻子|
+|1	|   1	|   Neck	|   脖子|
+|2	|   2	|   RShoulder |    右肩|
+|3	|   3	|   RElbow	   |    右手肘|
+|4	|   4	|   RWrist |   右手腕|
+|5	|   5	|   LShoulder|	左肩|
+|6	|   6	|   LElbow	|   左手肘|
+|7	|   7	|   LWrist	|   左手腕|
+|8	|   8	|   MidHip	|   中臀|
+|9	|   9	|   RHip	|   右臀|
+|10	|   10	|   RKnee	|   右膝盖|
+|11	|   11	|   RAnkle	|   右脚踝|
+|12	|   12	|   LHip	|   左臀|
+|13	|   13	|   LKnee	|   左膝盖|
+|14	|   14	|   LAnkle	|   左脚踝|
+|15	|   15	|   REye	|   右眼|
+|16	|   16	|   LEye	|   左眼|
+|17	|   17	|   REar	|   右耳|
+|18	|   18	|   LEar	|   左耳|
+|19	|   19	|   LBigToe|	左大拇指|
+|20	|   20	|   LSmallToe  |	左小拇指|
+|21	|   21	|   LHeel	|   左脚跟|
+|22	|   22	|   RBigToe    |	右大拇指|
+|23	|   23	|   RSmallToe  |	右小拇指|
+|24	|   24	|   RHeel	|   右脚跟|
+
+<br>
+
+![](/img/post-vr/pose7.png)
+
+<br>
 
 ### 附录3
 
@@ -219,6 +254,8 @@ ___参考文献___:
 * [VideoPose3D by Facebook][i11]
 * [[目标检测] YOLO][i12]
 * [商汤科技 AR游戏同步角色动作][i16]
+
+
 
 [i1]: http://densepose.org
 [i2]: https://github.com/facebookresearch/Detectron
