--- a/source/_posts/2019-12-19-cuda.markdown
+++ b/source/_posts/2019-12-19-cuda.markdown
@@ -285,7 +285,7 @@ if (cacheIndex == 0)
 
 ### 4.1 函数类型限定符
 
-函数类型限定符用来标识函数运行在主机还是设备上，函数由主机还是设备调用。
+函数类型限定符用来标识函数运行在主机(CPU)还是设备(GPU)上，函数由主机还是设备调用。
 
 ##### \_\_global\_\_
 
