--- a/source/_posts/2019-12-19-cuda.markdown
+++ b/source/_posts/2019-12-19-cuda.markdown
@@ -310,6 +310,12 @@ if (cacheIndex == 0)
 * 效果等同于函数不加任何限定符
 * 不能与__global__共同使用， 但可以和__device__联合使用
 
+
+```
+__host__ __device__能够用来修饰类的成员函数，__global__不能（类的静态函数也不行）
+__global__只能修饰普通的全局函数。
+```
+
 ##### \_\_noinline\_\_
 
 * 声明不允许内联
