--- a/source/_posts/2020-01-03-ray.markdown
+++ b/source/_posts/2020-01-03-ray.markdown
@@ -793,6 +793,7 @@ bool IntersectCube(Ray ray,float3 cubeSize,inout float t,inout float3 normal){
 * [Microsoft’s DirectX Ray Tracing (DXR) ][i14]
 * [NVIDIA Vulkan Ray Tracing Tutorial][i15]
 * [一个99行的c++版本的path tracer][i16]
+* [BVH with SAH (Bounding Volume Hierarchy  with Surface Area Heuristic)][i17]
 
 [i1]: http://blog.three-eyed-games.com/2018/05/03/gpu-ray-tracing-in-unity-part-1/
 [i2]: https://blog.csdn.net/qq_38275140/article/details/90345582
@@ -810,3 +811,4 @@ bool IntersectCube(Ray ray,float3 cubeSize,inout float t,inout float3 normal){
 [i14]: https://devblogs.microsoft.com/directx/announcing-microsoft-directx-raytracing/
 [i15]: https://developer.nvidia.com/rtx/raytracing/vkray
 [i16]: http://www.kevinbeason.com/smallpt/
+[i17]: https://www.cnblogs.com/lookof/p/3546320.html
